Lat search v0.1(non functional)

--- a/GroupProject.html
+++ b/GroupProject.html
@@ -389,6 +389,84 @@ pre code {
 ## 3 603 18.45518 -67.11989
 ## 4 606 18.15835 -66.93291
 ## 5 610 18.29537 -67.12514</code></pre>
+<pre><code>## Warning in if (target * sign &lt; val.lo * sign) {: the condition has length &gt; 1
+## and only the first element will be used</code></pre>
+<pre><code>## Warning in if (target * sign &gt; val.hi * sign) {: the condition has length &gt; 1
+## and only the first element will be used</code></pre>
+<pre><code>## Warning in if (val == target) {: the condition has length &gt; 1 and only the first
+## element will be used</code></pre>
+<pre><code>## Warning in if (sign * val &lt; sign * target) {: the condition has length &gt; 1 and
+## only the first element will be used</code></pre>
+<pre><code>## Warning in if (val == target) {: the condition has length &gt; 1 and only the first
+## element will be used</code></pre>
+<pre><code>## Warning in if (sign * val &lt; sign * target) {: the condition has length &gt; 1 and
+## only the first element will be used</code></pre>
+<pre><code>## Warning in if (val == target) {: the condition has length &gt; 1 and only the first
+## element will be used</code></pre>
+<pre><code>## Warning in if (sign * val &lt; sign * target) {: the condition has length &gt; 1 and
+## only the first element will be used</code></pre>
+<pre><code>## Warning in if (val == target) {: the condition has length &gt; 1 and only the first
+## element will be used</code></pre>
+<pre><code>## Warning in if (sign * val &lt; sign * target) {: the condition has length &gt; 1 and
+## only the first element will be used</code></pre>
+<pre><code>## Warning in if (val == target) {: the condition has length &gt; 1 and only the first
+## element will be used</code></pre>
+<pre><code>## Warning in if (sign * val &lt; sign * target) {: the condition has length &gt; 1 and
+## only the first element will be used</code></pre>
+<pre><code>## Warning in if (val == target) {: the condition has length &gt; 1 and only the first
+## element will be used</code></pre>
+<pre><code>## Warning in if (sign * val &lt; sign * target) {: the condition has length &gt; 1 and
+## only the first element will be used</code></pre>
+<pre><code>## Warning in if (val == target) {: the condition has length &gt; 1 and only the first
+## element will be used</code></pre>
+<pre><code>## Warning in if (sign * val &lt; sign * target) {: the condition has length &gt; 1 and
+## only the first element will be used</code></pre>
+<pre><code>## Warning in if (val == target) {: the condition has length &gt; 1 and only the first
+## element will be used</code></pre>
+<pre><code>## Warning in if (sign * val &lt; sign * target) {: the condition has length &gt; 1 and
+## only the first element will be used</code></pre>
+<pre><code>## Warning in if (val == target) {: the condition has length &gt; 1 and only the first
+## element will be used</code></pre>
+<pre><code>## Warning in if (sign * val &lt; sign * target) {: the condition has length &gt; 1 and
+## only the first element will be used</code></pre>
+<pre><code>## Warning in if (val == target) {: the condition has length &gt; 1 and only the first
+## element will be used</code></pre>
+<pre><code>## Warning in if (sign * val &lt; sign * target) {: the condition has length &gt; 1 and
+## only the first element will be used</code></pre>
+<pre><code>## Warning in if (val == target) {: the condition has length &gt; 1 and only the first
+## element will be used</code></pre>
+<pre><code>## Warning in if (sign * val &lt; sign * target) {: the condition has length &gt; 1 and
+## only the first element will be used</code></pre>
+<pre><code>## Warning in if (val == target) {: the condition has length &gt; 1 and only the first
+## element will be used</code></pre>
+<pre><code>## Warning in if (sign * val &lt; sign * target) {: the condition has length &gt; 1 and
+## only the first element will be used</code></pre>
+<pre><code>## Warning in if (val == target) {: the condition has length &gt; 1 and only the first
+## element will be used</code></pre>
+<pre><code>## Warning in if (sign * val &lt; sign * target) {: the condition has length &gt; 1 and
+## only the first element will be used</code></pre>
+<pre><code>## Warning in if (val == target) {: the condition has length &gt; 1 and only the first
+## element will be used</code></pre>
+<pre><code>## Warning in if (sign * val &lt; sign * target) {: the condition has length &gt; 1 and
+## only the first element will be used</code></pre>
+<pre><code>## Warning in if (val == target) {: the condition has length &gt; 1 and only the first
+## element will be used</code></pre>
+<pre><code>## Warning in if (val.lo == target) {: the condition has length &gt; 1 and only the
+## first element will be used</code></pre>
+<pre><code>##     zip eiaid       utility_name state service_type      ownership  comm_rate
+## 1 85321   176 Ajo Improvement Co    AZ      Bundled Investor Owned 0.09692473
+## 2 35218   195   Alabama Power Co    AL      Bundled Investor Owned 0.11127465
+## 3 35219   195   Alabama Power Co    AL      Bundled Investor Owned 0.11127465
+## 4 35214   195   Alabama Power Co    AL      Bundled Investor Owned 0.11127465
+## 5 35215   195   Alabama Power Co    AL      Bundled Investor Owned 0.11127465
+## 6 35216   195   Alabama Power Co    AL      Bundled Investor Owned 0.11127465
+##     ind_rate  res_rate      lat
+## 1 0.08846154 0.1015806 32.23775
+## 2 0.06142607 0.1220348 32.23775
+## 3 0.06142607 0.1220348 32.23775
+## 4 0.06142607 0.1220348 32.23775
+## 5 0.06142607 0.1220348 32.23775
+## 6 0.06142607 0.1220348 32.23775</code></pre>
 </div>
 
 
